# yapdfminer

./: .gitignore  Makefile  Pipfile  README.md  setup.cfg  setup.py
docs/: index.html
pdfminer/: cmapdb.py  encodingdb.py  high_level.py  image.py  layout.py  pdffont.py  pdfpage.py  pdfparser.py
samples/: Makefile
samples/nonfree/: f1040nr.html.ref  f1040nr.txt.ref  f1040nr.xml.ref  one-byte-identity.xml.ref
samples/private/: README.md
tests/: test_pdfminer_ccitt.py  test_pdfminer_crypto.py  test_pdfminer_psparser.py  test_tools_dumppdf.py  test_tools_pdf2txt.py
tools/: dumppdf.py  pdf2html.cgi  pdf2txt.py  pdfdiff.py
