[bdist_wheel]
# Generate a wheel for Python 3 only.
universal = 0

[flake8]
max-line-length = 119
exclude =
    .git,
    *.pyc,
    __pycache__,
    build,
    dist,
    docs,
    .eggs,
    samples

[metadata]
# Includes the license file in the wheel
license_files = LICENSE

[options]
setup_requires = setuptools_scm

[yapf]
based_on_style = pep8
spaces_before_comment = 2
column_limit=119
split_before_expression_after_opening_paren=True
